--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,21 @@
 
 .cardContainer {
     margin-bottom: 15px;
-    position: relative;
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
+    text-align: center;
 }
 
-.box-sizing: border-box;
-
-div {
-    display: block;
+.card {
+  margin: 0 auto;
 }
+.card-img-top {
+  height: 50vw;
+  object-fit: cover;
+}
+
+
+
+/* Style all font awesome icons */
+  /* Add a hover effect */
+  .fa:hover {
+    opacity: 0.7;
+  }
