--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
     margin-left: auto;
     justify-content: right !important;
 }
+.nav-link::before, .nav-link:active::before {
+width: 100%
+visibility: visible;
+}
 
 .cardContainer {
     margin-bottom: 15px;
@@ -17,10 +21,11 @@
   object-fit: cover;
 }
 
-
-
 /* Style all font awesome icons */
   /* Add a hover effect */
   .fa:hover {
     opacity: 0.7;
   }
+.html {
+  scroll-behavior: smooth;
+}
